@@ -1,3 +1,4 @@
+ * Changed the way CassandraConnectorSource is obtained due to SPARK-7171 (SPARKC-268)
  * Bump Spark version to 1.6-SNAPSHOT and add Apache Snapshot repository to resolvers (SPARKC-272)
 
 ********************************************************************************
